This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
4/28/23: Fixed exposure times being increased by 27% when saving as MRC from
Falcon 4i by accounting for the unit for making fractions being 9 frames
instead of 7 (In 4.0).

4/26/23: Added slider to hole finder dialog to exclude holes near edge of area
of found holes.

4/26/23: Added script command to report frame-saving path for Gatan and
generic frame-saving cameras.

4/25/23: Made sure all image windows are redrawn after some Navigator
changes.

4/25/23: SEM_4-0-24
4/25/23: Fixed test for bad variable substitution (In 4.0).

4/19/23: Added script command to change group ID of item.

4/18/23: Added hot key for toggling Registration point.

4/18/23: Fixed SetAutocontourGroups command when dialog closed.

4/18/23: Improved erasing of periodic signals by erasing in full-sized images
and doing more FFTs to trim artifacts at edges.

4/18/23: SEM_4-0-21
4/18/23: Fixed problems with using a variable for a script command (In 4.0).

4/18/23: Disabled line drawing on FFTs (In 4.0).

4/18/23: Made Hole Finder reload single images as integer when they are maps
converted to bytes, to stabilize the intensity values (in 4.0).

4/16/23: Added option to reverse direction of zoom with mouse wheel to a new
Miscellaneous Options submenu of settings.

4/16/23: Added script commands to report the system path and the values of an
item of image metadata using the key with which itwould be saved to an .mdoc
file.

4/16/23: Made OpenOldFile command skip montage setup dialog.

4/16/23: Added File menu entry to set the current directory.

4/16/23: Added Script menu entry to prevent program from retunring keyboard
focus to one-line script window.
