@@ -259,6 +259,7 @@ struct CameraParameters {
   float doseTabConst;
   float specToCamDoseFac;     // Last measured scaling from specimen to camera dose rate
   float addToExposure;        // Constant to add to exposure time 
+  float addToEERExposure;     // Additional amount to add when saving EER
   int JeolDetectorID;         // Detector ID to be selected/deselected when switching
   BOOL invertFocusRamp;       // Lazy way out: flag to invert direction of dynamic focus
   int numChannels;
