@@ -1066,9 +1066,11 @@
             FPS.&nbsp; It needs to be set to 0.058824 for a camera that reads out at 17 FPS.
             &nbsp; The default for Falcon 3 is 0.02495, but at least one site needed 0.02505.&nbsp; The
             default for Falcon 4 is 0.004021, and the default for Falcon 4i is 0.003147.
-            .&nbsp; Do not set this property unless it is needed, and do not use this property if 
+            &nbsp; Do not set this property unless it is needed, and do not use this property if 
             there is more than one kind of Falcon camera, or multiple cameras needing different intervals; use the camera 
-            property 'ReadoutInterval' for whichever camera requires a non-standard interval.&nbsp; As of
+            property 'ReadoutInterval' for whichever camera requires a non-standard interval.&nbsp; If you determine
+            a refined value to get the expected number of frames when saving as EER, as described in 
+            <a href = "readoutInterval>ReadoutInterval</a>, set the camera property instead.&nbsp; As of
             SerialEM 3.9, 1/30/21, a value that is not long enough should no longer cause crashes in
             SerialEM or FEI-SEMserver when saving frames.
           </TD>
@@ -1585,13 +1587,21 @@
             'FalconReferenceDir'; see that property for details.&nbsp;</TD>
         </TR>
         <TR VALIGN="top">
-          <TD>ReadoutInterval</TD>
+          <TD><A NAME = "readoutInterval">ReadoutInterval</A></TD>
           <TD>Readout interval for a specific Falcon camera.&nbsp; Use this property if 
             there is more than one Falcon camera and one or more non-standard intervals need 
             to be used.&nbsp; If the system has both Falcon 3 and Falcon 4 with standard 
             readout intervals (see the general property 'FalconReadoutInterval'), this 
             interval should be assigned correctly by the program and this property should 
-            not need to be entered.</TD>
+            not need to be entered.&nbsp; However, a refined value may be desired to get 
+            the expected number of frames from Falcon 4 when saving as EER.&nbsp; The best way
+            to determine the value is to activate debugging output either by setting DebugOutput to 'E'
+            (when running directly on the scope computer) or setting the environment variable
+            FEISEMSERVER_DEBUG to 1 on the scope computer (when using FEI-SEMserver).&nbsp; Take
+            a 30 second exposure and save frames as MRC (e.g., 15 2-second summed frames).&nbsp; Look for 
+            the debugging output 'Changed exposure to xx.xx to get N instead of M frames'.&nbsp; Multiply the
+             existing readout interval by N / M.
+          </TD>
         </TR>
         <TR VALIGN="top">
           <TD>CameraSizeX</TD>
@@ -1964,7 +1974,17 @@
              &nbsp; The
             test for whether a different value is needed is to see whether a 0.05 sec exposure
             gives twice as many counts as a 0.025 sec exposure for Falcon 3.&nbsp; If not, try a value of 0 then
-            values between 0 and 0.013.&nbsp; The default for Falcon 4 is half the readout interval (0.02).</TD>
+            values between 0 and 0.013.&nbsp; The default for Falcon 4 is half the readout interval (0.002).</TD>
+        </TR>
+        <TR VALIGN="top">
+          <TD><A NAME = "addToEER">AddToEERExposure</A></TD>
+          <TD>Amount to add to Falcon 4 exposure time (in addition to 'AddToExposureTime' value) when saving 
+            frames as EER (default 0.02 sec). &nbsp; This value can be adjusted to make the number of frames actually taken 
+            match the number shown in SerialEM.&nbsp; To determine a robust value, set the exposure time to around 0.06 sec
+            and take images with saving as EER, examining the actual number of frames saved.&nbsp; Vary the 
+            property in steps of 0.005 (using the script command 'SetCameraProperty') and find the lowest and 
+            highest values that give the correct number.&nbsp; Set this entry to the midpoint of that range.
+          </TD>
         </TR>
         <TR VALIGN="top">
           <TD>PostBlankerDelay</TD>
