@@ -32,7 +32,7 @@
       necessary so that the pixel size matches as well as possible when you change
       from one camera to another. If you select intensity matching, then beam
       intensity will be adjusted so that the electrons per pixel per second will be
-      the same after switchin between cameras. The pixel matching can be controlled by
+      the same after switching between cameras. The pixel matching can be controlled by
       setting a property 'PixelMatchFactor' for one or more cameras; for example,
       setting this factor to 2 for one camera will make it match binned pixels for
       that camera with unbinned pixels for the other camera. This factor also adjusts
@@ -515,8 +515,8 @@
       to meet these constraints; they will not be changed back when switching away
       from this alignment.&nbsp; With a Falcon 4, when either aligning frames in the
       Falcon processor or saving frames in an MRC file, the basic unit is not the
-      single 0.004 msec frame but sums of 7 frames.&nbsp; This dialog reflects that by
-      referring to &#39;7-frames&#39; in various labels.&nbsp; </P>
+      single 0.004 msec frame but sums of 7 frames (or 9 frames for Falcon 4i).&nbsp; This dialog reflects that by
+      referring to &#39;7-frames&#39; or &#39;9-frames&#39; in various labels.&nbsp; </P>
     <P>As of SerialEM 3.9 (1/28/21), this button is not enabled when just aligning in
       the Falcon processor without saving frames; the temporary saving of frames in
       this case in earlier versions was due to a misunderstanding.</P>
