@@ -1475,6 +1475,11 @@
         counting mode images produced by aligning EER frames match the counts in other 
         counting mode images; this is estimated as described in
         <a href="#setup_camera_gain">Measuring Camera Gain</a>.</li>
+      <li>When saving EER files from a <em>Falcon 4</em>, the actual number of frames may not 
+        match the expected number shown in SerialEM.&nbsp; To make this match, first 
+        adjust the amount to add to the exposure time with short exposures as described 
+        for the property <a href = "addToEER">AddToEERExposure</a>, then refine the camera&#39;s readout interval 
+        with a long exposure saved as MRC as described for the property <a href = "readoutInterval">ReadoutInterval</a>.</li>
       <li>There are two things that can speed up frame alignment in SerialEM: most
         importantly, not reading the frames across a 1 gigabit network connection;
         secondly, using the GPU of an NVIDIA card for alignment.&nbsp; The simplest step
